[package]
name = "smartcore"
version = "0.1.0"
authors = ["Tormod Gjeitnes Hellen <tormod@mbr-targeting.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartcore = "0.2.0"
csv = "1.1.5"
serde = "1.0.123"
rand = "0.8.3"
rand_distr = "0.4.0"
